tests/c/static-assert-fail.c
// EXPECT-ERROR
// CHECK-ERR: Serious error: static assertion failed

_Static_assert(0, "boom");
